# vylyv_forge

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/modules/start_module/dto/: create_start_module_dto.py
src/modules/start_module/repository/: start_module_repository.py
src/modules/start_module/service/: start_module_crud_service.py  start_module_service.py
src/modules/start_module/validators/: start_module_validator.py
src/routers/: start_module_router.py
src/vylyv_forge/: cli.py  errors.py  filesystem.py  generator.py  module_generator.py  process.py  requirements_manager.py  terminal.py  validators.py
src/vylyv_forge/commands/: create_command.py
src/vylyv_forge/templates/: api.py  basic.py  saas.py
tests/: test_start_module.py
vylyv/: cli.py  generator.py
