[project]
name = "vylyv-forge"
version = "0.1.0"
description = "A fast Python project generator for basic, API, and SaaS projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vylyv" }
]
dependencies = [
    "typer",
    "rich"
]

[project.scripts]
forge = "vylyv_forge.cli:main"
vylyv-forge = "vylyv_forge.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]